2004-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (distclean): Remove DOCSTRINGS.
	(maintainer-clean): Remove $(OPT_HANDLERS).

2004-01-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cell.cc (octave_cell::subsref): Make '{' case N-d aware.

	* ov-scalar.cc (streamoff_array_value): New function.
	* ov-scalar.h: Provide decl.

	* OPERATORS/op-streamoff.cc (STREAMOFF_COMP_OP): New maco.
	Use it to define streamoff by matrix, streamoff by scalar, scalar
	by streamoff, and matrix by streamoff comparison operators.
	(install_streamoff_ops): Install them.

	* Cell.h (Cell::operator ()): Delete (we inherit them from Array<T>).
	(maybe_resize, elem_internal): Delete unused functions.

	* ls-mat5.cc (write_mat5_cell_array): Cell& arg is now const.

2004-01-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* variables.cc (is_valid_function): If warn, also print error
	message if arg is not a string.

	* ov-usr-fcn.cc (Fnargin, Fnargout): New functions.

	* octave.cc (intern_argv): Lookup __nargin__ instead of nargin.
	* ov-usr-fcn.cc (octave_user_function::install_automatic_vars):
	Lookup __nargin__ and __nargout__ instead of nargin and nargout.

	* variables.h (at_top_level): Now extern.
	(lookup_user_function): New function.
	* variables.cc: Provide decls.

	* ov.h, ov.cc (octave_value::user_function_value):
	New virtual function.
	* ov-base.h, ov-base.cc (octave_base_value::user_function_value):
	Provide default version.
	* ov-usr-fcn.h (octave_user_function::user_function_value):
	New function.

	* ov-re-mat.cc (complex_array_value): New function.
	* ov-re-mat.h: Provide decl.

	* ov-cell.cc (Fiscellstr): Don't return value on usage error.

	* error.cc: (symbols_of_error): Delete DEFVAR for error_text.
	Define __error_text__ and error_text as aliases for lasterr.

	* error.cc (bind_global_error_variable,	clear_global_error_variable):
	Delete.
	* variables.h: Delete decls.

	* parse.y (Feval, Fevalin): Don't call bind_global_error_variable.